--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,8 @@
 body{
    
      background-image:url("azul.jpg");
-     background-size:100%;
+     background-size:100% 100% 100% 100%;
+     
    
 }
 #contenedor{
